# 2026-03-mle-workshop

./: README.md
day_1/: Makefile  pyproject.toml
day_1/duration_prediction/: main.py  train.py
day_1/tests/: test_train.py
day_2/duration_pred_serve/: Dockerfile  Makefile  fly.toml  predict-test.py  pyproject.toml
day_2/duration_pred_serve/src/duration_pred_serve/: ping.py  serve.py
