[project]
name = "duration-pred-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wadim", email = "ynotzort@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
